style(lists): fix broken layout on IOS Safari

--- a/src/assets/styles/common.scss
+++ b/src/assets/styles/common.scss
@@ -1,3 +1,8 @@
+html {
+  min-width: 320px;
+  overflow-x: auto;
+}
+
 ::selection {
   color: $color-white;
   background: $color-primary;
